dilang-interpreter/test/cases/errors/unknown_variant_catch.di
enum E { A }

fn main() {
    try {
        raise A
    } catch {
        Bogus -> print("never")
    }
}
